# SGD_Projekt

1.0_Szkielet_gry/: main.cpp  readme.txt
1.1_Dodanie_dinozaura/: main.cpp  readme.txt
1.2_Przeszkody_kolizja/: CMakeLists.txt  main.cpp  readme.txt
1.3_Aktualizacja_przeszkód/: main.cpp  readme.txt
1.4_Punktacja_licznik/: main.cpp  readme.txt
1.5_Punkty_za_przeszkode/: main.cpp  readme.txt
1.6_Zwiększenie_dynamiki/: main.cpp  readme.txt
1.7_Latające_przeszkody/: CMakeLists.txt  main.cpp  readme.txt
1.8_Final_result/: main.cpp  readme.txt
assets/: readme.txt
